id=recommend-calrusvay bug fixed

--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
           <div id="recommend-clarusway">
 
             <div class="recommend-prefer">
-            <input type="radio" name="recommend" id="yes" checked="checked" />
+            <input type="radio" name="recommend" id="yes" checked="checked" value="Definitely, Yes" />
             <label for="yes" >Definitely, Yes</label><br /></div>
 
             <div class="recommend-prefer">
-              <input type="radio" name="recommend" id="maybe" />
+              <input type="radio" name="recommend" id="maybe" value="Maybe" />
               <label for="maybe">Maybe</label><br />
             </div>
 
             <div class="recommend-prefer">
-              <input type="radio" name="recommend" id="Nsure" />
+              <input type="radio" name="recommend" id="Nsure" value="Not Sure"/>
               <label for="Nsure">Not Sure</label><br />
             </div>
 
             <div class="recommend-prefer">
-              <input type="radio" name="recommend" id="no" />
+              <input type="radio" name="recommend" id="no" value="Definitely, No" />
               <label for="no">Definitely, No</label>
             </div>
           </div>
