lecture was given

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Thank you for taking the time to help us improve the platform</p>
       </header>
       <div id="survey-form">
-        <form action="result.html" id="survey-form">
+        <form action="" id="survey-form">
           <div id="info">
             <label for="name" class="label">Name</label> <br />
             <input
@@ -23,7 +23,6 @@
               id="name"
               class="input"
               placeholder="Enter your name"
-              checked
             /><br />
             <label for="surname" class="label">Surname</label><br />
             <input
@@ -44,10 +43,10 @@
           </div>
           <p>Which option best describes your current role?</p>
           <select name="user-role" id="dropdown">
-            <option disabled="" selected="" value="">
+            <option disabled selected value="">
               Select current role
             </option>
-            <option value="student">Student</option>
+            <option  value="student">Student</option>
             <option value="teacher">Teacher</option>
             <option value="Full time job">Full time job</option>
             <option value="Part time job">Part time job</option>
@@ -64,7 +63,7 @@
 
             <div class="recommend-prefer">
               <input type="radio" name="recommend" id="maybe" value="Maybe" />
-              <label for="maybe">Maybe</label><br />
+              <label for="maybe">Maybe</label><br/>
             </div>
 
             <div class="recommend-prefer">
@@ -82,10 +81,10 @@
           <div id="most-like-select">
           <select name="mostlike" id="most-like">
             <option value="" disabled selected>Select an option</option>
-            <option value="Courser">Courser</option>
-            <option value="Project">Project</option>
-            <option value="Community">Community</option>
-            <option value="Mentors">Mentors</option>
+            <option value="Courser" ">Courser</option>
+            <option value="Project" ">Project</option>
+            <option value="Community" " >Community</option>
+            <option value="Mentors" ">Mentors</option>
           </select>
         </div>
           <p>What would you like to see improved? (Check all that apply)</p>
