--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Thank you for taking the time to help us improve the platform</p>
       </header>
       <div id="survey-form">
-        <form action="" id="survey-form">
+        <form action="result.html" id="survey-form">
           <div id="info">
             <label for="name" class="label">Name</label> <br />
             <input
