--- a/index.html
+++ b/index.html
@@ -33,12 +33,10 @@
               placeholder="Enter your surname"
             /><br />
             <label for="email" class="label">Email</label><br />
-            <input
-              type="email"
-              name="user mail"
-              class="input"
-              id="email"
-              placeholder="user@clarusway.com"
+            <input type="email" name="user-mail"
+            class="input"
+            id="email"
+            placeholder="user@clarusway.com"
             /><br />
           </div>
           <p>Which option best describes your current role?</p>
@@ -125,7 +123,7 @@
             placeholder="Enter your comment here...Thanxs for your commets...."
             
           ></textarea>
-          <button type="submit" id="submit">Submit</button>
+          <input type="submit" value="Submit" id="submit">
         </form>
       </div>
     </div>
